--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
 
 <body id="body">
 
-<div id="map"class="map"></div>
+    <div id="heading">
+        <header> <center style="margin-top:8px;">PUBLIC TOILETS IN KISUMU CITY</center> </header>
+    </div>
+
+    <div id="map"class="map"></div>
 
     <script type="text/javascript" src="./js/pts_data.js"/></script><!--js source source code-->
     <script type="text/javascript" src="./js/poi.js"/></script><!--js source source code-->
