--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
 
     <div id="map"class="map"></div>
-
+    <script type="text/javascript" src="./js/leaflet-providers.js"/></script><!--js source source code-->
     <script type="text/javascript" src="./js/pts_data.js"/></script><!--js source source code-->
     <script type="text/javascript" src="./js/poi.js"/></script><!--js source source code-->
     <script type="text/javascript" src="./js/service_boundary.js"/></script><!--js source source code-->
