--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 <body id="body">
 
     <div id="heading">
+        <img id="header_logo" src="./img/header_logo.png">
         <header> <center style="margin-top:8px;">PUBLIC TOILETS IN KISUMU CITY</center> </header>
     </div>
 
