--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <div id="heading">
         <img id="header_logo" src="./img/header_logo.png">
-        <header> <center style="margin-top:8px;">PUBLIC TOILETS IN KISUMU CITY</center> </header>
+        <header> <center style="margin-top:8px; color: white;">PUBLIC TOILETS IN KISUMU CITY</center> </header>
     </div>
 
     <div id="map"class="map"></div>
